--- a/subdomains/ryan/styles/globals.css
+++ b/subdomains/ryan/styles/globals.css
@@ -1,8 +1,15 @@
 body {
   background-color: #ebeff0;
   font: 12px Verdana;
+  -webkit-text-size-adjust: 100%;
 }
 
 h3 {
   margin: 0;
+}
+
+@media screen and (max-width: 600px) {
+  body {
+    font-size: 14px;
+  }
 }
